# ta-lib

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  setup.py
.github/workflows/: build.yml  codeql-analysis.yml
cmake/: talib.txt.in
